app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */


@import url(http://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500); 
@import "bootstrap-sprockets";
@import "bootstrap";

/* Variables, mixins, etc.. */

.td_padding {
	padding: 14px;
}

.td_bottom_pad {
	padding-bottom: 65px;
}

@mixin background-tile {
	box-sizing: border-box;
	background-color: #fff;
	border-radius: 5px;
	box-shadow: 3px 3px 5px 6px #ccc;
	padding: 1.5em 1.25em;
}



body {
	background-color: #f5f5f5;
	font-family: 'Lora', serif;
	padding-top: 72px;

}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Ubuntu', sans-serif;
	font-weight: 300;
}

p.alert, p.notice {
	margin: 0;
}



.navbar {
	font-family: 'Ubuntu', sans-serif;
	text-transform: uppercase;
	

}
.navbar-default {
	background-color: #008080;
	padding-bottom: 5px;
	padding-top: 5px;
	height: 65px;
	position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 1000;

	.navbar-nav > li > a {
		color: #fff;
		&:hover {
			color: darken(#f1c40f, 5%);
			transition: 0.5s;
		}
	}

	.navbar-header { 
		.navbar-brand {
			
			color: #fff;
			letter-spacing: 1.4px;
			font-size: 42px;
			font-weight: bold;
			text-transform: none;
		}

		.yellow{
			color: yellow;		
		}
		
	}



.navbar-logo{
			float: left;
			padding-right: 8px;
			
		}

	.dropdown-menu > li > a:hover {
		background-color: darken(#f1c40f, 5%);
		color: #fff;
	}

	.navbar-nav > .open > a, .navbar-nav > .open > a:hover, .navbar-nav > .open > a:focus {
		background-color: darken(#f1c40f, 5%);
		color: #fff;	
	}

}

.dropdown-menu > .active > a {
	background-color: #f1c40f;
	color: #fff;
}

.chosen {
	background-color: #f1c40f;
	color: #fff;
	padding: 4px 0px;
}


.btn_search {
		background-color: darken(#f1c40f, 5%);
		color: #fff;
		border: 1px solid darken(#f1c40f, 5%);

		border-radius: 5px;
		font-family: 'Ubuntu', sans-serif;
	&:hover {
		text-decoration: none;
		color: darken(#f1c40f, 5%);
		background-color: #fff;
		transition: 0.5s;
		// padding: 8px 20px;
	}
}

.btn-custom {
	color: darken(#f1c40f, 5%);
	background-color: #fff;
	border: 1px solid darken(#f1c40f, 5%);
	padding: 8px 20px;
	border-radius: 5px;
	font-family: 'Ubuntu', sans-serif;
	&:hover {
		text-decoration: none;
		background-color: darken(#f1c40f, 5%);
		color: #fff;
		transition: 0.5s;
	}
}

.btn-custom2 {
	color: #333;
	background-color: #fff;
	border: 1px solid #222;
	padding: 8px 20px;
	border-radius: 5px;
	font-family: 'Ubuntu', sans-serif;
	&:hover {
		text-decoration: none;
		background-color: #008080;
		color: #fff;
		transition: 0.5s;
	}	
}

.links {

	.btn-custom {
		padding: 3px 10px;
		font-weight: 300;
	}

}

.book-links {

	.btn-custom {
		padding: 3px 10px;
		font-weight: 300;
		margin-top: 40px;	
	}

}

.row-books{
	padding-left: 17.5%;
}

.right {
	text-align: right
}


.left {
	padding-left: 8px;
}

.left-col-title{
	background: #008080;
	color: #ffffff;
	padding: 6px;
}

.margin_top {
	margin-top: 10px;
}

.profile_heading {
	background: #008080;
	color: #ffffff;
	padding-left: 7px;
}

.left-column {
  position:absolute;
  margin-left: 8.6%;
  top:17%;
  left:0;
  width:14%;
  // height:100%;
  background:#ffffff;
  border: 3px solid #008080 ;
  border-radius: 12px;

h3{
	text-align: center;
	align-top: 0px;
}

 
h4{
	padding-left: 11px;
}

}




.booksize {
	height: 300px;
	width: 210px;
	margin-bottom: 40px;
	@include background-tile;
}

.booksizesmaller {
	height: 255px;
	width: 190px;
	margin-bottom: 40px;
	@include background-tile;
}

.bookdisplaysize {
	height: 370px;
	width: 260px;
	@include background-tile;
}


.book-teaser{
	padding-top: 15px;
	padding-bottom: 15px;
	display: block;
    margin: 0 auto;
	height: 350px;
	width: 520px;
	
}


.bookInfo {
	@include background-tile;

	.bookTitle {
		margin-top: 0;
		font-size: 2em;
	}

	.avg-rating {
		font-size: 1.5em;
		margin-top: 15px;
		margin-bottom: 5px;
	}

	.number-of-reviews {
		font-size: 0.85em;
		font-style: italic;
	}

	.bookAuthor {
		font-size: 1.5em;
		margin-top: 10px;
		margin-bottom: 10px;
		span {
			font-size: 0.80em;
		}	
	}

	.book-desc {
		font-size: 1.05em;
		line-height: 1.5;
		margin-bottom: 15px;
		margin-top: 15px;
	}

}

.padding-on-left{
	margin-left: 19%;
}

.currentGenre {
	margin-bottom: 40px;
}



.reviews {

	@include background-tile;
	margin-top: 40px;

	h1 {
		margin-top: 0;
		margin-bottom: 15px;
		font-size: 2em;
	}

	.review {
		border-bottom: 1px solid gainsboro;
		margin-bottom: 15px;
		padding-bottom: 10px;

		.review-comment {
			font-size: 1.05em;
			line-height: 1.5;
		}

	}

	.new-review {
		padding-top: 8px;
	}

}


.new-book-form {
	@include background-tile;

	h1 {
		margin-top: 0;
	}

	#category_id {
		margin-bottom: 10px;
	}

	#book_book_img {
		margin-bottom: 10px;
	}

}



.edit-book-form {

	@include background-tile;

	h1 {
		margin-top: 0;
	}

	#book_category_id {
		margin-bottom: 10px;
	}

	#book_book_img {
		margin-bottom: 10px;
	}

}


.new-review-form, .edit-review-form {
	@include background-tile;

	h1 {
		margin-top: 0;
	}

	#rating-form {
		margin-bottom: 15px;

		label {
			display: block;
		}

	}

}



.signup-form {
	@include background-tile;

	h2 {
		margin-top: 0;
	}

}

.login-form {
	@include background-tile;

	h2 {
		margin-top: 0;
	}

}

.book-submit-promo
{
	border-color: lightgray;
	border-style: solid;
	background: #f0f0f0;
	border-radius: 10px;
	padding: 9px;
	margin-left: 18.6%;
}


.round-image-50 {
    background-color: white;
    border: 1px solid #d9d9d9;
    border-radius: 25px;
    -moz-border-radius: 25px;
    -webkit-border-radius: 25px;
    height: 50px;
    width: 50px;
    overflow: hidden;
    text-align: center;
    img { width: 100% }
}


.red {
	color: red;
}

.r-padding{
	padding-right: 92px;
	padding-top: 22px;
	float: right;
}

.form-for {
	font-size:  16px;;
}

.yellow{
	color: yellow;
}


.avatar-pic {
	height: 277px;
	width: 222px;
	margin-bottom: 7px;
	border-radius: 50%;
	border: 3px solid gray;
	// box-shadow: 2px 3px 5px 4px;
	@include background-tile;
}

